[package]
name = "l1-dfa"
version = "0.1.1"
authors = ["Andrew <andrew@subarctic.org>"]
license = "MIT"
description = "Deterministic Finite-State Automata Library for Rust, written in L1"
edition = "2018"
readme = "README.md"
repository = ""
keywords = ["DFA","regex","automata","finite"]

[dependencies]
regex-syntax = { version = "0.6.28" }
